packages/nipaplay_smb2/lib/nipaplay_smb2_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/nipaplay_smb2.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class NipaplaySmb2Bindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NipaplaySmb2Bindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NipaplaySmb2Bindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Free memory returned from this library.
  void np_smb2_free(ffi.Pointer<ffi.Void> ptr) {
    return _np_smb2_free(ptr);
  }

  late final _np_smb2_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'np_smb2_free',
      );
  late final _np_smb2_free = _np_smb2_freePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// List SMB shares (root path) or directory entries as JSON array.
  ///
  /// `path` accepts `/`, `/share`, `/share/dir`.
  /// Returns a malloc-allocated UTF-8 JSON string on success; returns NULL on
  /// error and writes a message into `err_buf`.
  ffi.Pointer<ffi.Char> np_smb2_list_entries_json(
    ffi.Pointer<ffi.Char> host,
    int port,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> domain,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> err_buf,
    int err_len,
  ) {
    return _np_smb2_list_entries_json(
      host,
      port,
      username,
      password,
      domain,
      path,
      err_buf,
      err_len,
    );
  }

  late final _np_smb2_list_entries_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('np_smb2_list_entries_json');
  late final _np_smb2_list_entries_json = _np_smb2_list_entries_jsonPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  /// Stat a SMB path.
  /// Returns 0 on success, <0 on failure (negative errno-like).
  int np_smb2_stat(
    ffi.Pointer<ffi.Char> host,
    int port,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> domain,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint32> out_type,
    ffi.Pointer<ffi.Uint64> out_size,
    ffi.Pointer<ffi.Char> err_buf,
    int err_len,
  ) {
    return _np_smb2_stat(
      host,
      port,
      username,
      password,
      domain,
      path,
      out_type,
      out_size,
      err_buf,
      err_len,
    );
  }

  late final _np_smb2_statPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint32>,
            ffi.Pointer<ffi.Uint64>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('np_smb2_stat');
  late final _np_smb2_stat = _np_smb2_statPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint32>,
          ffi.Pointer<ffi.Uint64>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  /// Open a file reader for streaming reads.
  /// Returns a non-zero opaque handle on success; 0 on failure.
  int np_smb2_reader_open(
    ffi.Pointer<ffi.Char> host,
    int port,
    ffi.Pointer<ffi.Char> username,
    ffi.Pointer<ffi.Char> password,
    ffi.Pointer<ffi.Char> domain,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint64> out_size,
    ffi.Pointer<ffi.Char> err_buf,
    int err_len,
  ) {
    return _np_smb2_reader_open(
      host,
      port,
      username,
      password,
      domain,
      path,
      out_size,
      err_buf,
      err_len,
    );
  }

  late final _np_smb2_reader_openPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.IntPtr Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint64>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('np_smb2_reader_open');
  late final _np_smb2_reader_open = _np_smb2_reader_openPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint64>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  /// Read bytes at `offset` into `buf`.
  /// Returns >=0 bytes read, or <0 on failure (negative errno-like).
  int np_smb2_reader_pread(
    int reader,
    int offset,
    ffi.Pointer<ffi.Uint8> buf,
    int count,
    ffi.Pointer<ffi.Char> err_buf,
    int err_len,
  ) {
    return _np_smb2_reader_pread(reader, offset, buf, count, err_buf, err_len);
  }

  late final _np_smb2_reader_preadPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.IntPtr,
            ffi.Uint64,
            ffi.Pointer<ffi.Uint8>,
            ffi.Uint32,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
          )
        >
      >('np_smb2_reader_pread');
  late final _np_smb2_reader_pread = _np_smb2_reader_preadPtr
      .asFunction<
        int Function(
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  /// Close and free a reader handle.
  void np_smb2_reader_close(int reader) {
    return _np_smb2_reader_close(reader);
  }

  late final _np_smb2_reader_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.IntPtr)>>(
        'np_smb2_reader_close',
      );
  late final _np_smb2_reader_close = _np_smb2_reader_closePtr
      .asFunction<void Function(int)>();
}
